# OverGrowthJA2025

./: .gitignore  CMakeLists.txt  README.md  WebGLBuild.sh  custom_shell.html  imgui.ini
assets/: project.canis
assets/animations/: civilian_build.anim  civilian_walk_back.anim  civilian_walk_front.anim  ent_attack_front.anim  ent_walk_back.anim  ent_walk_front.anim  knight_attack_back.anim  knight_attack_front.anim  knight_walk_back.anim  knight_walk_front.anim
assets/materials/: 3d_sprite.material  default.material  grass_sprite.material  water.material
assets/prefabs/: dummy_building.prefab  dummy_npc.prefab  water.prefab
assets/scenes/: aiden_test.scene  better_test.scene  engine_splash.scene  kaylie_test.scene  logan_test.scene  lose_menu.scene  main_menu.scene  main_menu_copy.scene  mesh.scene  pong.scene  settings.scene  walyn_test.scene
assets/shaders/: 3d_sprite.vs  anim_model.fs  anim_model.vs  hdr&depth_pass.fs  hdr.fs  lighting.fs  lighting.vs  placement_tool.fs  placement_tool.vs  portal.fs  portal.vs  shadow_mapping.fs  shadow_mapping_unlit.fs  sprite.fs  sprite.vs  water.fs  water.vs
assets/shaders/wind/: wind_effect_environment.fs  wind_effect_environment.vs  wind_mapping_depth_instance.vs
blender/: 3d_sprite.blend  3d_sprite.blend1
src/: App.cpp  App.hpp  RegisterCanis.cpp  RegisterCanis.hpp  main.cpp
src/ECS/Components/: Billboard.hpp  Health.hpp  NPCBoid.hpp
src/ECS/ScriptableEntities/: DebugCamera2D.hpp  MainMenuButtons.hpp  SettingsMenuFunctions.hpp  SplashLoader.hpp
src/ECS/ScriptableEntities/AI/: AiBrain.cpp  AiBrain.hpp  Job.cpp  Job.hpp  job.hpp
src/ECS/ScriptableEntities/Buildings/: Barracks.cpp  Barracks.hpp  Farm.cpp  Farm.hpp  Hut.cpp  Hut.hpp  HutBase.cpp  HutBase.hpp  Sapling.cpp  Sapling.hpp  Temp3DSprite.cpp  Temp3DSprite.hpp  TownHall.cpp  TownHall.hpp  WoodHut.cpp  WoodHut.hpp
src/ECS/ScriptableEntities/Camera/: DebugCamera2D.hpp  RegisterCamera.cpp  RegisterCamera.hpp
src/ECS/ScriptableEntities/Characters/: DummyNPC.cpp  DummyNPC.hpp  Enemy.cpp  Enemy.hpp  Ent.cpp  Ent.hpp  NPC.cpp  NPC.hpp  WavePointsManager.cpp  WavePointsManager.hpp
src/ECS/ScriptableEntities/Player/: PlayerBuildInput.hpp  PlayerCamera.hpp  PlayerMovement.hpp  RegisterPlayer.cpp  RegisterPlayer.hpp  Resources.hpp
src/ECS/ScriptableEntities/Pong/: Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp  RegisterPong.cpp  RegisterPong.hpp  TimerTimer.cpp  TimerTimer.hpp
src/ECS/ScriptableEntities/UI/: BuildMenu.hpp  LoseMenuButtons.hpp  MainMenuButtons.hpp  RegisterUI.cpp  RegisterUI.hpp  SettingsMenuFunctions.hpp
src/ECS/Systems/: BillboardSystem.hpp  NPCBoidSystem.cpp  NPCBoidSystem.hpp
src/Registers/: RegisterAiden.cpp  RegisterAiden.hpp  RegisterEric.cpp  RegisterEric.hpp  RegisterKaylie.cpp  RegisterKaylie.hpp  RegisterLogan.cpp  RegisterLogan.hpp  RegisterWalyn.cpp  RegisterWalyn.hpp  RegisterXander.cpp  RegisterXander.hpp
web/: index.html
